--- a/index.html
+++ b/index.html
@@ -212,11 +212,11 @@
     <div class="download">
         <h2>安裝檔下載</h2>
         <p>請點擊以下按鈕下載安裝檔案：</p>
-        <a href="https://fetca905048-my.sharepoint.com/personal/cs_swtc_com/_layouts/15/onedrive.aspx?id=%2Fpersonal%2Fcs%5Fswtc%5Fcom%2FDocuments%2FDownLoad%2FSolidWorks%20Installation%2FSOLIDWORKS2022%E6%9B%B4%E6%96%B0%E7%A8%8B%E5%BC%8F%2FSW2022SP05%2Epart1%2Erar&parent=%2Fpersonal%2Fcs%5Fswtc%5Fcom%2FDocuments%2FDownLoad%2FSolidWorks%20Installation%2FSOLIDWORKS2022%E6%9B%B4%E6%96%B0%E7%A8%8B%E5%BC%8F&ga=1"
-            target="_blank">下載安裝檔1 (9 GB)</a>
         <a href="https://fetca905048-my.sharepoint.com/:u:/g/personal/cs_swtc_com/EX8RZsDz1JZHskIT4nIDhQQB4NCh2Yg3WTYdw6HL_RtZbw?e=t39oYY"
-            target="_blank">下載安裝檔2 (7.57 GB)</a>
+            target="_blank">下載安裝檔1 (9 GB)</a>
         <a href="https://fetca905048-my.sharepoint.com/:u:/g/personal/cs_swtc_com/EQFHfJG_s8JPmsKiA5-hfsABl1NNd0aoAQppvWyXTUenzw?e=sB4Dz3"
+            target="_blank">下載安裝檔2 (7.57 GB)</a>
+        <a href="https://drive.google.com/file/d/1pm93BukxcQe3Vcui61AgW4jwwIkD_GFB/view?usp=drive_link"
             target="_blank">下載安裝檔3 (3.76 MBs)</a>
     </div>
 
@@ -235,3 +235,4 @@
 
 
 </html>
+
