--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
         <a href="https://fetca905048-my.sharepoint.com/:u:/g/personal/cs_swtc_com/EQFHfJG_s8JPmsKiA5-hfsABl1NNd0aoAQppvWyXTUenzw?e=sB4Dz3"
             target="_blank">下載安裝檔2 (7.57 GB)</a>
         <a href="https://drive.google.com/file/d/1pm93BukxcQe3Vcui61AgW4jwwIkD_GFB/view?usp=drive_link"
-            target="_blank">下載安裝檔3 (3.76 MBs)</a>
+            target="_blank">下載安裝檔3 (3.76 MB)</a>
     </div>
 
     <div class="contact" style="text-align: center; margin-top: 50px;">
@@ -235,4 +235,5 @@
 
 
 </html>
+
 
