--- a/index.html
+++ b/index.html
@@ -216,8 +216,8 @@
             target="_blank">下載安裝檔1 (9 GB)</a>
         <a href="https://fetca905048-my.sharepoint.com/:u:/g/personal/cs_swtc_com/EQFHfJG_s8JPmsKiA5-hfsABl1NNd0aoAQppvWyXTUenzw?e=sB4Dz3"
             target="_blank">下載安裝檔2 (7.57 GB)</a>
-        <a href="https://drive.google.com/file/d/1pm93BukxcQe3Vcui61AgW4jwwIkD_GFB/view?usp=drive_link"
-            target="_blank">下載安裝檔3 (3.76 MB)</a>
+        <a href="https://drive.google.com/file/d/1EZNv5S9RK9CTWmiv3H3NrHUuu8mb182Q/view?usp=drive_link"
+            target="_blank">下載安裝檔3</a>
     </div>
 
     <div class="contact" style="text-align: center; margin-top: 50px;">
@@ -235,5 +235,6 @@
 
 
 </html>
+
 
 
