--- a/index.html
+++ b/index.html
@@ -212,10 +212,10 @@
     <div class="download">
         <h2>安裝檔下載</h2>
         <p>請點擊以下按鈕下載安裝檔案：</p>
-        <a href="https://fetca905048-my.sharepoint.com/:u:/g/personal/cs_swtc_com/EX8RZsDz1JZHskIT4nIDhQQB4NCh2Yg3WTYdw6HL_RtZbw?e=t39oYY"
-            target="_blank">下載安裝檔1 (9 GB)</a>
+        <a href="https://drive.google.com/file/d/1YESiEDtE7F4iYRrWg-Ok5Zcn7B0TYj34/view?usp=drive_link"
+            target="_blank">下載安裝檔1</a>
         <a href="https://fetca905048-my.sharepoint.com/:u:/g/personal/cs_swtc_com/EQFHfJG_s8JPmsKiA5-hfsABl1NNd0aoAQppvWyXTUenzw?e=sB4Dz3"
-            target="_blank">下載安裝檔2 (7.57 GB)</a>
+            target="_blank">下載安裝檔2</a>
         <a href="https://drive.google.com/file/d/1EZNv5S9RK9CTWmiv3H3NrHUuu8mb182Q/view?usp=drive_link"
             target="_blank">下載安裝檔3</a>
     </div>
@@ -235,6 +235,7 @@
 
 
 </html>
+
 
 
 
