--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
         <p>請點擊以下按鈕下載安裝檔案：</p>
         <a href="https://drive.google.com/file/d/1YESiEDtE7F4iYRrWg-Ok5Zcn7B0TYj34/view?usp=drive_link"
             target="_blank">下載安裝檔1</a>
-        <a href="https://fetca905048-my.sharepoint.com/:u:/g/personal/cs_swtc_com/EQFHfJG_s8JPmsKiA5-hfsABl1NNd0aoAQppvWyXTUenzw?e=sB4Dz3"
+        <a href="https://drive.google.com/file/d/1YESiEDtE7F4iYRrWg-Ok5Zcn7B0TYj34/view?usp=drive_link"
             target="_blank">下載安裝檔2</a>
         <a href="https://drive.google.com/file/d/1EZNv5S9RK9CTWmiv3H3NrHUuu8mb182Q/view?usp=drive_link"
             target="_blank">下載安裝檔3</a>
@@ -235,6 +235,7 @@
 
 
 </html>
+
 
 
 
