--- a/index.html
+++ b/index.html
@@ -218,6 +218,8 @@
             target="_blank">下載安裝檔2</a>
         <a href="https://drive.google.com/file/d/1EZNv5S9RK9CTWmiv3H3NrHUuu8mb182Q/view?usp=drive_link"
             target="_blank">下載安裝檔3</a>
+          <a href="https://drive.google.com/file/d/1EZNv5S9RK9CTWmiv3H3NrHUuu8mb182Q/view?usp=drive_link"
+            target="_blank">7-zip download</a>
     </div>
 
     <div class="contact" style="text-align: center; margin-top: 50px;">
@@ -235,6 +237,7 @@
 
 
 </html>
+
 
 
 
