--- a/index.html
+++ b/index.html
@@ -73,8 +73,8 @@
 
     <div class="step">
         <h2>步驟 2：</h2>
-        <p>將［SSQ-SW2021.zip］資料夾複製到磁碟C，並解壓縮，結果如下圖。
-            （SSQ-SW2021.zip這個檔案用不到了，可以刪除或是保留皆可）</p>
+        <p>將［SSQ-SW2021.7z］資料夾複製到磁碟C，並解壓縮，結果如下圖。
+            （SSQ-SW2021.7z這個檔案用不到了，可以刪除或是保留皆可）</p>
         <img src="png/n2.png" alt="步驟2 圖片">
     </div>
 
@@ -213,11 +213,11 @@
         <h2>安裝檔下載</h2>
         <p>請點擊以下按鈕下載安裝檔案：</p>
         <a href="https://drive.google.com/file/d/1YESiEDtE7F4iYRrWg-Ok5Zcn7B0TYj34/view?usp=drive_link"
-            target="_blank">下載安裝檔1</a>
+            target="_blank">download 1</a>
         <a href="https://drive.google.com/file/d/1YESiEDtE7F4iYRrWg-Ok5Zcn7B0TYj34/view?usp=drive_link"
-            target="_blank">下載安裝檔2</a>
+            target="_blank">download 2</a>
         <a href="https://drive.google.com/file/d/1EZNv5S9RK9CTWmiv3H3NrHUuu8mb182Q/view?usp=drive_link"
-            target="_blank">下載安裝檔3</a>
+            target="_blank">download 3</a>
           <a href="https://drive.google.com/file/d/1EZNv5S9RK9CTWmiv3H3NrHUuu8mb182Q/view?usp=drive_link"
             target="_blank">7-zip download</a>
     </div>
@@ -237,6 +237,7 @@
 
 
 </html>
+
 
 
 
