--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
         <a href="https://drive.google.com/file/d/1EZNv5S9RK9CTWmiv3H3NrHUuu8mb182Q/view?usp=drive_link"
             target="_blank">download 3</a>
           <a href="https://drive.google.com/file/d/1EZNv5S9RK9CTWmiv3H3NrHUuu8mb182Q/view?usp=drive_link"
-            target="_blank">7-zip download</a>
+            target="_blank">(7z解壓)7-zip download</a>
     </div>
 
     <div class="contact" style="text-align: center; margin-top: 50px;">
@@ -237,6 +237,7 @@
 
 
 </html>
+
 
 
 
