--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 
     <div class="step">
         <h2>步驟 1：</h2>
-        <p>確認SolidWorks 2021 安裝檔案及註冊機檔案(請將下方請將下方download1,2,3,7z下載)</p>
+        <p>確認SolidWorks 2021 安裝檔案及註冊機檔案(請將下方download1,2,3,7z下載)</p>
         <img src="png/n1.png" alt="步驟1 圖片">
     </div>
 
@@ -237,6 +237,7 @@
 
 
 </html>
+
 
 
 
