--- a/index.html
+++ b/index.html
@@ -212,13 +212,13 @@
     <div class="download">
         <h2>安裝檔下載</h2>
         <p>請點擊以下按鈕下載安裝檔案：</p>
-        <a href="https://drive.google.com/file/d/1YESiEDtE7F4iYRrWg-Ok5Zcn7B0TYj34/view?usp=drive_link"
+        <a href="https://drive.google.com/file/d/1yb3zSWoNN_lNho3Ro3-hFg7FTgpAXhB-/view?usp=drive_link"
             target="_blank">download 1</a>
-        <a href="https://drive.google.com/file/d/1YESiEDtE7F4iYRrWg-Ok5Zcn7B0TYj34/view?usp=drive_link"
+        <a href="https://drive.google.com/file/d/1YESiEDtE7F4iYRrWg-Ok5Zcn7B0TYj34/view?usp=sharing"
             target="_blank">download 2</a>
-        <a href="https://drive.google.com/file/d/1EZNv5S9RK9CTWmiv3H3NrHUuu8mb182Q/view?usp=drive_link"
+        <a href="https://drive.google.com/file/d/1EZNv5S9RK9CTWmiv3H3NrHUuu8mb182Q/view?usp=sharing"
             target="_blank">download 3</a>
-          <a href="https://drive.google.com/file/d/1EZNv5S9RK9CTWmiv3H3NrHUuu8mb182Q/view?usp=drive_link"
+          <a href="https://drive.google.com/file/d/1TQUSqPFaQ1m30RCSf_fqDHMTD8R0C38s/view?usp=sharing"
             target="_blank">(7z解壓)7-zip download</a>
     </div>
 
@@ -237,6 +237,7 @@
 
 
 </html>
+
 
 
 
