--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
     <div class="step">
         <h2>步驟 11：</h2>
         <p>若出現這個訊息，表示目前沒有網路，無法連線，［取消］即可</p>
-        <img src="pnn11.png" alt="步驟11 圖片">
+        <img src="png/n11.png" alt="步驟11 圖片">
     </div>
 
     <div class="step">
@@ -237,6 +237,7 @@
 
 
 </html>
+
 
 
 
