--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>安裝程式教學</title>
-     <link rel="icon" href="png/favicon.png" type="image/png">
+     <link rel="icon" href="png/sun.gif" type="image/png">
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -238,6 +238,7 @@
 
 
 </html>
+
 
 
 
