--- a/index.html
+++ b/index.html
@@ -213,11 +213,11 @@
     <div class="download">
         <h2>安裝檔下載</h2> <!-- https://drive.google.com/drive/folders/1eF-CfToE6e7z5dO2EciQkDy8msI4ryRC?usp=sharing -->
         <p>請點擊以下按鈕下載安裝檔案：</p>
-        <a href="https://drive.google.com/file/d/1yb3zSWoNN_lNho3Ro3-hFg7FTgpAXhB-/view?usp=drive_link"
+        <a href="https://drive.google.com/drive/folders/1eF-CfToE6e7z5dO2EciQkDy8msI4ryRC?usp=sharing"
             target="_blank">download 1</a>
-        <a href="https://drive.google.com/file/d/1YESiEDtE7F4iYRrWg-Ok5Zcn7B0TYj34/view?usp=sharing"
+        <a href="https://drive.google.com/drive/folders/16cuNNyJliF5RcwBGK5uKYeqZuO-mOWGd?usp=sharing%5C"
             target="_blank">download 2</a> <!-- https://drive.google.com/drive/folders/16cuNNyJliF5RcwBGK5uKYeqZuO-mOWGd?usp=sharing-->
-        <a href="https://drive.google.com/file/d/1EZNv5S9RK9CTWmiv3H3NrHUuu8mb182Q/view?usp=sharing"
+        <a href="https://drive.google.com/drive/folders/1yUlEpdDZ05pW-gwzOoOr1UcydW2sa7sW?usp=sharing"
             target="_blank">download 3</a> <!-- https://drive.google.com/drive/folders/1yUlEpdDZ05pW-gwzOoOr1UcydW2sa7sW?usp=sharing-->
           <a href="https://drive.google.com/file/d/1TQUSqPFaQ1m30RCSf_fqDHMTD8R0C38s/view?usp=sharing"
             target="_blank">(7z解壓)7-zip download</a>
@@ -238,6 +238,7 @@
 
 
 </html>
+
 
 
 
