--- a/index.html
+++ b/index.html
@@ -213,12 +213,12 @@
     <div class="download">
         <h2>安裝檔下載</h2> <!-- https://drive.google.com/drive/folders/1eF-CfToE6e7z5dO2EciQkDy8msI4ryRC?usp=sharing -->
         <p>請點擊以下按鈕下載安裝檔案：</p>
-        <a href="https://drive.google.com/drive/folders/1eF-CfToE6e7z5dO2EciQkDy8msI4ryRC?usp=sharing"
-            target="_blank">download 1</a>
-        <a href="https://drive.google.com/drive/folders/16cuNNyJliF5RcwBGK5uKYeqZuO-mOWGd?usp=sharing%5C"
-            target="_blank">download 2</a> <!-- https://drive.google.com/drive/folders/16cuNNyJliF5RcwBGK5uKYeqZuO-mOWGd?usp=sharing-->
-        <a href="https://drive.google.com/drive/folders/1yUlEpdDZ05pW-gwzOoOr1UcydW2sa7sW?usp=sharing"
-            target="_blank">download 3</a> <!-- https://drive.google.com/drive/folders/1yUlEpdDZ05pW-gwzOoOr1UcydW2sa7sW?usp=sharing-->
+        <a href="http://craftlegion.ddns.net:4043/SW2024_Install/SSQ_SW2024.7z">download.1.站點1</a>
+        <a href="http://craftlegion.ddns.net:4043/SW2024_Install/SOLIDWORKS_2024.7z"
+            target="_blank">download.2.站點1</a> 
+                <a href="http://craftlegion.servepics.com:8081/SW2024_Install/SSQ_SW2024.7z">download.1.站點</a>
+        <a href="http://craftlegion.servepics.com:8081/SW2024_Install/SOLIDWORKS_2024.7z"
+            target="_blank">download.2.站點2</a> 
           <a href="https://drive.google.com/file/d/1TQUSqPFaQ1m30RCSf_fqDHMTD8R0C38s/view?usp=sharing"
             target="_blank">(7z解壓)7-zip download</a>
     </div>
@@ -238,6 +238,7 @@
 
 
 </html>
+
 
 
 
