--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
         <a href="http://craftlegion.ddns.net:4043/SW2024_Install/SSQ_SW2024.7z">download.1.站點1</a>
         <a href="http://craftlegion.ddns.net:4043/SW2024_Install/SOLIDWORKS_2024.7z"
             target="_blank">download.2.站點1</a> 
-                <a href="http://craftlegion.servepics.com:8081/SW2024_Install/SSQ_SW2024.7z">download.1.站點</a>
+                <a href="http://craftlegion.servepics.com:8081/SW2024_Install/SSQ_SW2024.7z">download.1.站點2</a>
         <a href="http://craftlegion.servepics.com:8081/SW2024_Install/SOLIDWORKS_2024.7z"
             target="_blank">download.2.站點2</a> 
 
@@ -237,6 +237,7 @@
 
 
 </html>
+
 
 
 
