--- a/index.html
+++ b/index.html
@@ -213,12 +213,10 @@
     <div class="download">
         <h2>安裝檔下載</h2> <!-- https://drive.google.com/drive/folders/1eF-CfToE6e7z5dO2EciQkDy8msI4ryRC?usp=sharing -->
         <p>請點擊以下按鈕下載安裝檔案：</p>
-        <a href="http://craftlegion.ddns.net:4043/SW2024_Install/SSQ_SW2024.7z">download.1.站點1</a>
-        <a href="http://craftlegion.ddns.net:4043/SW2024_Install/SOLIDWORKS_2024.7z"
-            target="_blank">download.2.站點1</a> 
-                <a href="http://craftlegion.servepics.com:8081/SW2024_Install/SSQ_SW2024.7z">download.1.站點2</a>
-        <a href="http://craftlegion.servepics.com:8081/SW2024_Install/SOLIDWORKS_2024.7z"
-            target="_blank">download.2.站點2</a> 
+        <a href="http://craftlegion.ddns.net:4043/SW2024_Install/SSQ_SW2024.7z"target="_blank">download.1.站點1</a>
+        <a href="http://craftlegion.ddns.net:4043/SW2024_Install/SOLIDWORKS_2024.7z"target="_blank">download.2.站點1</a> 
+        <a href="http://craftlegion.servepics.com:8081/SW2024_Install/SSQ_SW2024.7z"target="_blank">download.1.站點2</a>
+        <a href="http://craftlegion.servepics.com:8081/SW2024_Install/SOLIDWORKS_2024.7z"target="_blank">download.2.站點2</a> 
 
     </div>
 
@@ -237,6 +235,7 @@
 
 
 </html>
+
 
 
 
