--- a/index.html
+++ b/index.html
@@ -218,19 +218,12 @@
         <a href="http://craftlegion.servepics.com:8081/SW2024_Install/SSQ_SW2024.7z"target="_blank">download.1.站點2</a>
         <a href="http://craftlegion.servepics.com:8081/SW2024_Install/SOLIDWORKS_2024.7z"target="_blank">download.2.站點2</a> 
 
-    </div>
-
-    <div class="contact" style="text-align: center; margin-top: 50px;">
-        <h3>聯絡我們</h3>
-        <p>如有問題，請點擊下方按鈕寄信給我們：</p>
-        <a href="https://mail.google.com/mail/?view=cm&fs=1&to=admin@potatohan.com&su=安裝問題回報&body=您好，請描述您在安裝時遇到問題，我們會盡快回復您!"
-            target="_blank"
-            style="display:inline-block; padding:10px 20px; background:rgb(255, 255, 255); color:s#000000; text-decoration:none; border-radius:5px;">
-            ✉️ 寄信給我們
-        </a>
-
-    </div>
-
+    </<div class="footer">
+    © 2025 potatohan™ — 馬鈴薯飯<br>
+    All Rights Reserved.<br>
+    Design by potatohan™<br>
+    Email: <a href="mailto:contact@potatohan.com">contact@potatohan.com</a>
+</div>
 </body>
 
 
