--- a/index.html
+++ b/index.html
@@ -218,11 +218,23 @@
         <a href="http://craftlegion.servepics.com:8081/SW2024_Install/SSQ_SW2024.7z"target="_blank">download.1.站點2</a>
         <a href="http://craftlegion.servepics.com:8081/SW2024_Install/SOLIDWORKS_2024.7z"target="_blank">download.2.站點2</a> 
 
-    </<div class="footer">
+  
+<div style="
+    margin-top: 40px;
+    padding: 20px 10px;
+    background-color: #f2f2f2;
+    border-top: 1px solid #ddd;
+    font-size: 12px;
+    color: #555;
+    text-align: center;
+    line-height: 1.6;
+">
     © 2025 potatohan™ — 馬鈴薯飯<br>
     All Rights Reserved.<br>
     Design by potatohan™<br>
-    Email: <a href="mailto:contact@potatohan.com">contact@potatohan.com</a>
+    Email: <a href="mailto:contact@potatohan.com" style="color:#333; text-decoration:none;">
+        contact@potatohan.com
+    </a>
 </div>
 </body>
 
